--- a/src/sass/modules/home/_nav.sass
+++ b/src/sass/modules/home/_nav.sass
@@ -8,7 +8,7 @@ nav
     background-color: transparent
     align-items: center
     justify-content: space-between
-    padding:5vh 4vw
+    padding:4vh 4vw
     .links-button
         display: flex
         align-items: center
@@ -39,6 +39,9 @@ nav
     justify-content: center
     p
         text-align: center
+    h1
+        span
+            color: rgb(255, 176, 59)
     .btn2
         background-color: transparent
         color: white
