--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11851,12 +11851,21 @@ textarea.form-control-lg {
   font-family: sans-serif;
 }
 
+@font-face {
+  font-family: satisfy;
+  src: url(../fonts/Satisfy-Regular.ttf);
+}
 nav {
   display: flex;
-  background-color: transparent;
+  background-color: rgba(1, 1, 1, 0.319);
   align-items: center;
   justify-content: space-between;
   padding: 4vh 4vw;
+}
+nav h2, nav .h2 {
+  font-family: satisfy;
+  font-size: 40px;
+  color: white;
 }
 nav .links-button {
   display: flex;
@@ -11895,8 +11904,12 @@ nav .btn1:hover {
 .first-section p {
   text-align: center;
 }
+.first-section h1, .first-section .h1 {
+  font-family: satisfy;
+}
 .first-section h1 span, .first-section .h1 span {
   color: rgb(255, 176, 59);
+  font-family: satisfy;
 }
 .first-section .btn2 {
   background-color: transparent;
@@ -11926,6 +11939,9 @@ nav .btn1:hover {
   padding: 3vh 0;
   gap: 6vw;
 }
+.about-section1 .left-side h2, .about-section1 .left-side .h2 {
+  font-family: satisfy;
+}
 
 .icon-para {
   display: flex;
@@ -11935,8 +11951,12 @@ nav .btn1:hover {
   color: rgb(255, 160, 18);
 }
 
-.about-section2 div h2 span, .about-section2 div .h2 span {
+.about-section2 .title-section2 h2, .about-section2 .title-section2 .h2 {
+  font-family: satisfy;
+}
+.about-section2 .title-section2 h2 span, .about-section2 .title-section2 .h2 span {
   color: rgb(255, 176, 59);
+  font-family: satisfy;
 }
 
 .inside-section2 {
@@ -11950,6 +11970,9 @@ nav .btn1:hover {
   padding-top: 60px;
   padding-inline: 4vw;
   transition: 0.2s;
+}
+.inside-section2 .hover h2, .inside-section2 .hover .h2 {
+  font-family: satisfy;
 }
 .inside-section2 .hover h3, .inside-section2 .hover .h3 {
   color: rgb(255, 176, 59);
