--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -4,6 +4,9 @@
     align-items: center
     padding: 3vh 0
     gap: 6vw
+    .left-side
+        h2
+            font-family: satisfy
 .icon-para
     display: flex
     gap: 1vw
@@ -11,10 +14,12 @@
         color: rgb(255, 160, 18)
 
 .about-section2
-    div
+    .title-section2
         h2
+            font-family: satisfy
             span
                 color: rgb(255, 176, 59)
+                font-family: satisfy
 
 .inside-section2
     display: flex
@@ -26,6 +31,8 @@
         padding-top:  60px
         padding-inline: 4vw
         transition: 0.2s
+        h2
+           font-family: satisfy 
         h3
             color: rgb(255, 176, 59)
             font-weight: 800
