--- a/src/sass/modules/home/_nav.sass
+++ b/src/sass/modules/home/_nav.sass
@@ -2,13 +2,22 @@
     margin: 0
     padding: 0
     font-family: sans-serif
+
+@font-face 
+    font-family: satisfy
+    src: url(../fonts/Satisfy-Regular.ttf)
+
  
 nav
     display: flex
-    background-color: transparent
+    background-color: rgb(1,1 ,1,0.319 )
     align-items: center
     justify-content: space-between
     padding:4vh 4vw
+    h2
+        font-family: satisfy
+        font-size: 40px
+        color: white
     .links-button
         display: flex
         align-items: center
@@ -40,8 +49,10 @@ nav
     p
         text-align: center
     h1
+        font-family: satisfy
         span
             color: rgb(255, 176, 59)
+            font-family: satisfy
     .btn2
         background-color: transparent
         color: white
