--- a/src/sass/modules/home/_nav.sass
+++ b/src/sass/modules/home/_nav.sass
@@ -2,6 +2,10 @@
     margin: 0
     padding: 0
     font-family: sans-serif
+body
+    display: flex
+    flex-direction: column
+    gap: 10vh
 
 @font-face 
     font-family: satisfy
@@ -13,7 +17,7 @@ nav
     background-color: rgb(1,1 ,1,0.319 )
     align-items: center
     justify-content: space-between
-    padding:4vh 4vw
+    padding:2vh 4vw
     h2
         font-family: satisfy
         font-size: 40px
@@ -53,6 +57,10 @@ nav
         span
             color: rgb(255, 176, 59)
             font-family: satisfy
+    .buttons
+        display: flex
+        align-items: center
+        gap: 2vw
     .btn2
         background-color: transparent
         color: white
