--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -1,9 +1,8 @@
 .about-section1
     background-color: rgb(255, 250, 243)
     display: flex
-    align-items: center
     padding: 3vh 0
-    gap: 6vw
+    gap: 4vw
     .left-side
         h2
             font-family: satisfy
@@ -27,9 +26,10 @@
     gap: 3vw 
     padding-inline: 4vw
     .hover
+        width: 33vw
         box-shadow: 0 4px 8px 0 rgb(0, 0, 0 , 0.19)  
-        padding-top:  60px
-        padding-inline: 4vw
+        padding: 60px 40px
+        overflow: hidden
         transition: 0.2s
         h2
            font-family: satisfy 
@@ -38,8 +38,6 @@
             font-weight: 800
         &:hover
             background-color: rgb(255, 176, 59)
-            padding-top: 40px
-            padding-bottom: 20px
             color: white
             h3
                 color: white
