--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -1,3 +1,4 @@
 @import ./modules/home/_nav
 @import ./modules/home/_about-section
 @import ./modules/home/_event-section
+@import ./modules/home/_form-section
