--- a/src/sass/modules/home/_event-section.sass
+++ b/src/sass/modules/home/_event-section.sass
@@ -1,4 +1,4 @@
-.event-section
+.event-section-top
      background-image: url(../img/events-bg.jpg)
      background-position: center
      background-size: cover
