--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -2,3 +2,4 @@
 @import ./modules/home/_about-section
 @import ./modules/home/_event-section
 @import ./modules/home/_form-section
+@import ./modules/home/_gallery
