--- a/src/sass/modules/home/_form-section.sass
+++ b/src/sass/modules/home/_form-section.sass
@@ -23,6 +23,7 @@
         gap: 2vw
         input
             width: 30vw
+            border: 1px solid rgb(222, 226, 230)
             padding: 7px 7px
             &:focus
                 
@@ -32,6 +33,7 @@
     textarea
         padding: 4vh 1vw
         width: 100%
+        border: 1px solid rgb(222, 226, 230)
     .btn4
         width: 12vw
         text-align: center
