--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -3,3 +3,5 @@
 @import ./modules/home/_event-section
 @import ./modules/home/_form-section
 @import ./modules/home/_gallery
+@import ./modules/home/_chef-information
+@import ./modules/home/_contact-section
