--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -26,25 +26,22 @@
     gap: 3vw 
     padding-inline: 4vw
     .hover
+        height: 40vh
         width: 33vw
-        box-shadow: 0 4px 8px 0 rgb(0, 0, 0 , 0.19)  
-        padding: 60px 40px
-        overflow: hidden
-        position: relative
-        .hoverr
-              width: 100%
-              transition: 0.2s
-              overflow: hidden
-              position: relative
-              &:hover
-                background-color: rgb(255, 176, 59)
+        box-shadow: 0 4px 8px 0 rgb(0, 0, 0 , 0.19)
+        padding-inline: 40px
+        &:hover
+            background-color: rgb(255, 176, 59)
+            color: white
+            
+            h3
+                padding-top: 30px
+                transition: 0,5s
                 color: white
-                transform: scale(1.083)
-                h3
-                    color: white
         h2
             font-family: satisfy 
         h3
+            padding-top: 50px
             color: rgb(255, 176, 59)
             font-weight: 800
       
