--- a/src/sass/modules/home/_form-section.sass
+++ b/src/sass/modules/home/_form-section.sass
@@ -25,15 +25,14 @@
             width: 30vw
             border: 1px solid rgb(222, 226, 230)
             padding: 7px 7px
-            &:focus
-                
-                border: 1px solid blue
             &::placeholder
-                color: black
+                color: rgb(89, 92, 95)
     textarea
         padding: 4vh 1vw
         width: 100%
         border: 1px solid rgb(222, 226, 230)
+        &::placeholder
+                color: rgb(89, 92, 95)
     .btn4
         width: 12vw
         text-align: center
