--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -5,3 +5,4 @@
 @import ./modules/home/_gallery
 @import ./modules/home/_chef-information
 @import ./modules/home/_contact-section
+@import ./modules/home/_footer
