--- a/src/sass/modules/home/_contact-section.sass
+++ b/src/sass/modules/home/_contact-section.sass
@@ -36,6 +36,8 @@
                 &:hover
                     background-color: rgb(255, 176, 59)
                     color: white
+            p
+                color: rgb(122, 115, 133)
     form
         box-shadow: 0 4px 8px 0 rgb( 0 , 0 , 0 , 0.19 )
         display: flex
