--- a/src/sass/modules/home/_event-section.sass
+++ b/src/sass/modules/home/_event-section.sass
@@ -18,3 +18,9 @@
     h3
         color: rgb(255, 176, 59)
         font-family: satisfy
+
+@media  ( max-width: 430px )
+    .event-section-top
+        background-attachment: scroll
+
+    
