--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -3,9 +3,15 @@
     display: flex
     padding: 3vh 0
     gap: 4vw
+   
     .left-side
         h2
             font-family: satisfy
+            color: rgb(95, 89, 80)
+            strong
+                font-family: satisfy
+        p
+            color: rgb(132, 132, 132)
 .icon-para
     display: flex
     gap: 1vw
@@ -14,8 +20,14 @@
 
 .about-section2
     .title-section2
+        p
+            color: rgb(68, 74, 98)
+            width: 40vw
         h2
             font-family: satisfy
+            color: rgb(95, 89, 80)
+            font-weight: 700
+            font-size: 35px
             span
                 color: rgb(255, 176, 59)
                 font-family: satisfy
@@ -40,8 +52,28 @@
                 color: white
         h2
             font-family: satisfy 
+            color:  rgb(95, 89, 80)
         h3
             padding-top: 50px
             color: rgb(255, 176, 59)
             font-weight: 800
-      
+
+@media  ( max-width: 430px )
+    .about-section1
+        flex-direction: column
+        .left-side
+            p
+                padding-inline: 2vw
+            h2
+                font-size: 35px
+                padding-inline: 2vw
+    .about-section2
+        .title-section2
+            p
+                width: 85vw
+    .inside-section2
+        flex-direction: column
+        .hover
+            width: 100%
+
+
