--- a/src/sass/modules/home/_chef-information.sass
+++ b/src/sass/modules/home/_chef-information.sass
@@ -12,9 +12,15 @@
         font-size: small
         text-align: center
     h5
+        width: 75vw
         text-align: center
 .background-img
-    padding: 5vh 0
+    padding: 8vh 0
     background-image: url(../img/testimonials-bg.jpg)
     background-position: center
     background-size: cover
+
+@media  ( max-width: 430px )
+    .chef-information
+        h5
+            width: 98vw
