--- a/src/sass/modules/home/_footer.sass
+++ b/src/sass/modules/home/_footer.sass
@@ -30,3 +30,12 @@ footer
         span
             color: rgb(255, 176, 59)
             cursor: pointer
+
+@media  ( max-width: 430px )
+    footer
+        p
+            width: 95vw
+        .footer-icons
+            gap: 2vw
+            i
+                font-size: 15px
