--- a/src/sass/modules/home/_contact-section.sass
+++ b/src/sass/modules/home/_contact-section.sass
@@ -11,25 +11,26 @@
             font-family: satisfy
             color: rgb(255, 176, 59)
     .para
+        width: 40vw
         text-align: center
+        margin: auto
     div
         .map
             width: 100%
             height: 60vh
 
     .contact-information
-        padding-inline: 3vw
+        padding: 5vh 3vw
         display: flex
-        align-items: center
         justify-content: space-between
         box-shadow: 0 4px 8px 0 rgb(0, 0, 0 , 0.19)
         .location
             display: flex
             align-items: start
-            gap: 1vw
+            gap: 2vw
             i
                 color: rgb(255, 176, 59)
-                background-color: rgb(211, 207, 202)
+                background-color: rgb(255, 246, 232)
                 border-radius: 50%
                 padding: 3px 6px
                 font-size: large
@@ -43,13 +44,13 @@
         display: flex
         flex-direction: column
         gap: 2vh
-        padding-inline: 3vw
+        padding: 5vh 3vw
         .inputs
              display: flex
              gap: 2vw
              input
                 border: 1px solid rgb(222, 226, 230)
-                width: 50%
+                width: 100%
                 padding: 7px 7px
                 &::placeholder
                       color: rgb(89, 92, 95)
@@ -61,14 +62,13 @@
                 &::placeholder
                       color: rgb(89, 92, 95)
         .btn5
-            width: 12vw
             text-align: center
             margin: auto
             background-color: rgb(255, 176, 59)
             color: white
             border: none
             border-radius: 20px
-            padding: 7px 0
+            padding: 7px 15px
             &:hover
                 background-color: rgb(255, 160, 18)
         textarea
@@ -77,3 +77,17 @@
             border: 1px solid rgb(222, 226, 230)
             &::placeholder
                 color: rgb(89, 92, 95)
+
+@media  ( max-width: 430px )
+    .contact-section
+        .para
+            width: 95vw
+    .contact-information
+        flex-direction: column
+        justify-content: start
+
+    form
+        .inputs
+            flex-direction: column
+                
+       
