--- a/src/sass/modules/home/_form-section.sass
+++ b/src/sass/modules/home/_form-section.sass
@@ -2,11 +2,14 @@
     h1 
         text-align: center
         font-family: satisfy
+        color: rgb(95, 89, 80)
         span
             font-family: satisfy
             color: rgb(255, 160, 18)
     p
+        width: 40vw
         text-align: center
+        margin: auto
 .form
     
     padding: 3vh 4vw
@@ -44,3 +47,24 @@
         padding: 7px 0
         &:hover
             background-color: rgb(255, 160, 18)
+
+
+@media  ( max-width: 430px )
+    .form-section
+        h1
+            font-size: 35px
+            font-weight: 600
+        p
+            width: 95vw
+        .form
+            .first-inputs
+                flex-direction: column
+                gap: 2vh
+                input
+                    width: 90%
+        textarea
+            width: 90%
+        .btn4
+            width: 33vw
+
+
