--- a/src/sass/modules/home/_gallery.sass
+++ b/src/sass/modules/home/_gallery.sass
@@ -2,11 +2,14 @@
     h1
         text-align: center
         font-family: satisfy
+        color: rgb(95, 89, 80)
         span
             font-family: satisfy
             color: rgb(255, 176, 59)
     p
         text-align: center
+        margin: auto
+        width: 40vw
     
     
 .gallerys
@@ -30,3 +33,18 @@
             transition: 0.2s
             &:hover
                transform: scale(1.07)
+
+@media  ( max-width: 430px )
+    #gallery
+        h1
+            font-size: 35px
+            font-weight: 600
+        p
+            width: 95vw
+    .gallerys
+        .gallery-top
+            flex-direction: column
+            padding-inline: 3vw
+            .gallery-img
+                width: 100%
+
