--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -21,7 +21,7 @@
 .about-section2
     .title-section2
         p
-            color: rgb(68, 74, 98)
+            color:  rgb(68, 68, 68)
             width: 40vw
         h2
             font-family: satisfy
@@ -61,6 +61,8 @@
 @media  ( max-width: 430px )
     .about-section1
         flex-direction: column
+        video
+            width: 100%
         .left-side
             p
                 padding-inline: 2vw
