--- a/src/sass/modules/home/_form-section.sass
+++ b/src/sass/modules/home/_form-section.sass
@@ -7,6 +7,7 @@
             font-family: satisfy
             color: rgb(255, 160, 18)
     p
+        color: rgb(68, 68, 68)
         width: 40vw
         text-align: center
         margin: auto
@@ -16,7 +17,7 @@
    
     form
         box-shadow: 0 4px 8px 0 rgb( 0 , 0 , 0 , 0.19 )
-        padding: 4vh 2vw
+        padding: 4vh 4vw
         display: flex
         flex-direction: column
         gap: 3vh
