--- a/src/sass/modules/home/_gallery.sass
+++ b/src/sass/modules/home/_gallery.sass
@@ -40,6 +40,7 @@
             font-size: 35px
             font-weight: 600
         p
+            color: rgb(68, 68, 68)
             width: 95vw
     .gallerys
         .gallery-top
