adding menu section

--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -6,3 +6,4 @@
 @import ./modules/home/_chef-information
 @import ./modules/home/_contact-section
 @import ./modules/home/_footer
+@import ./modules/home/_menu-specials
