--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12466,5 +12466,40 @@ footer p span {
     font-size: 15px;
   }
 }
+.Check-our-Specials {
+  display: flex;
+  flex-direction: column;
+  gap: 3vh;
+}
+.Check-our-Specials .h2 {
+  font-family: satisfy;
+  text-align: center;
+  font-weight: 600;
+  color: rgb(95, 89, 80);
+}
+.Check-our-Specials .h2 span {
+  font-family: satisfy;
+  color: rgb(255, 176, 59);
+}
+.Check-our-Specials .p {
+  width: 40vw;
+  text-align: center;
+  margin: auto;
+}
+.Check-our-Specials .for-font h3, .Check-our-Specials .for-font .h3 {
+  color: rgb(95, 89, 80);
+  font-family: satisfy;
+  font-weight: 600;
+}
+
+@media (max-width: 430px) {
+  .Check-our-Specials .p {
+    width: 95vw;
+  }
+  .Check-our-Specials .h2 {
+    font-size: 35px;
+    font-weight: 600;
+  }
+}
 
 /*# sourceMappingURL=app.css.map */
